<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsEvento">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/NomEv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/Us_Ev_Nom"
                            android:inputType="textPersonName"
                            android:textStyle="bold" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/Inicio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Us_Ev_Ini"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

                    <TextView
                        android:id="@+id/Fecha"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Ev_Fecha"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Inicio" />

                    <TextView
                        android:id="@+id/Hora"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Ev_Hora"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Fecha" />

                    <Button
                        android:id="@+id/BtnFech"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Btn_Fecha"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/Fecha"
                        app:layout_constraintTop_toBottomOf="@+id/Inicio" />

                    <Button
                        android:id="@+id/BtnHor"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Btn_Hora"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/Hora"
                        app:layout_constraintTop_toBottomOf="@+id/BtnFech" />

                    <Button
                        android:id="@+id/btnHor2"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Btn_Hora"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/hora2"
                        app:layout_constraintTop_toBottomOf="@+id/btnFech2" />

                    <TextView
                        android:id="@+id/FIN"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Fin del Evento"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/Hora" />

                    <TextView
                        android:id="@+id/fecha2"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Ev_Fecha"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/FIN" />

                    <Button
                        android:id="@+id/btnFech2"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Btn_Fecha"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/fecha2"
                        app:layout_constraintTop_toBottomOf="@+id/FIN" />

                    <TextView
                        android:id="@+id/hora2"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Ev_Hora"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fecha2" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Ev_Des"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hora2" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView15">

                        <MultiAutoCompleteTextView
                            android:id="@+id/Descrip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/Us_Ev_Desc"
                            android:text="" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/CrearEvento"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="70dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Us_Bto_Cre"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtprofe" />

                    <TextView
                        android:id="@+id/txtprofe"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mOrder" />

                    <Button
                        android:id="@+id/mOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="Invitaciones"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>